# SKRoot-linuxKernelRoot

./: README.md
Lite_version/: 工程目录讲解.txt  工程目录说明.txt
Lite_version/PermissionManager/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Lite_version/patch_kernel_root/: patch_avc_denied.cpp  patch_avc_denied.h  patch_base.cpp  patch_base.h  patch_do_execve.cpp  patch_do_execve.h  patch_filldir64.cpp  patch_freeze_task.cpp  patch_freeze_task.h  patch_kernel_root.h  patch_kernel_root.vcxproj  patch_kernel_root.vcxproj.filters
Lite_version/patch_kernel_root/analyze/: kallsyms_lookup_name.cpp  kallsyms_lookup_name_4_6_0.h  kallsyms_lookup_name_6_1_42.h  kallsyms_lookup_name_6_1_60.cpp  kallsyms_lookup_name_6_4_0.cpp  kallsyms_lookup_name_6_4_0.h  kernel_symbol_parser.cpp  kernel_symbol_parser.h  kernel_version_parser.h  symbol_analyze.cpp  symbol_analyze.h
Lite_version/sources/: 工程目录说明.txt
Lite_version/sources/patch_kernel_root/: Makefile  patch_audit_log_start.cpp  patch_audit_log_start.h  patch_avc_denied.cpp  patch_avc_denied.h  patch_base.cpp  patch_base.h  patch_current_avc_check.cpp  patch_do_execve.cpp  patch_filldir64.cpp  patch_filldir64.h  patch_kernel_root.h  patch_kernel_root.vcxproj  patch_kernel_root.vcxproj.filters
Lite_version/sources/testRoot/: testRoot.cpp  目录结构文档.txt
Lite_version/src/: 工程目录说明.txt
Lite_version/src/patch_kernel_root/: Makefile  patch_audit_log_start.cpp  patch_audit_log_start.h  patch_avc_denied.cpp  patch_base.cpp  patch_base.h  patch_current_avc_check.cpp  patch_current_avc_check.h  patch_do_execve.cpp  patch_filldir64.cpp  patch_filldir64.h  patch_kernel_root.cpp  patch_kernel_root.h  patch_kernel_root.vcxproj  patch_kernel_root.vcxproj.filters
Lite_version/src/testRoot/: testRoot.cpp
Lite_version/testRoot/jni/: Android.mk  Build.bat  build_macros.mk  testRoot.cpp  testRoot.h
Pro(众测开放中)/: SKRoot(Pro)功能介绍.txt
Pro(众测开放中)/sources/testModule/: 目录清单.txt
Pro(众测开放中)/src/testInstall/: command.h  fork_helper.h  main.cpp  test.h
Pro(众测开放中)/src/testModule/: SKRoot模开发指南.docx  目录清单.txt
Pro(已开发完成，测试中)/: SKRoot(Pro)功能介绍.txt
Pro(已开发完成，测试中)/sources/: 工程目录说明.txt
Pro(已开发完成，测试中)/sources/testInstall/: command.cpp  exec_process.cpp  exec_process.h  main.cpp  目录结构文档.txt
Pro(已开发完成，测试中)/sources/testModule/: 目录清单.txt  目录结构文档.txt
Pro(正在众测中)/: SKRoot(Pro)功能介绍.txt
Pro(正在众测中)/sources/testInstall/: test.cpp
Pro_version/: 待发布说明.txt
other/: Pro_version待发布说明.txt
other/Pro_version/: 待发布说明.txt
patch_kernel_root/: patch_avc_denied.cpp  patch_avc_denied.h  patch_base.cpp  patch_base.h  patch_do_execve.cpp  patch_do_execve.h  patch_filldir64.cpp  patch_filldir64.h  patch_freeze_task.cpp  patch_freeze_task.h  patch_kernel_root.h  patch_kernel_root.vcxproj  patch_kernel_root.vcxproj.filters
patch_kernel_root/analyze/: ARM_asm.h  Arm64_asm.h  analyze_kernel.cpp  analyze_kernel.h  base_func.h  kallsyms_lookup_name.cpp  kallsyms_lookup_name.h  kallsyms_lookup_name_4_6_0.cpp  kallsyms_lookup_name_6_1_42.cpp  kallsyms_lookup_name_6_1_42.h  kallsyms_lookup_name_6_1_60.cpp  kallsyms_lookup_name_6_1_60.h  kallsyms_lookup_name_6_6_30.cpp  kallsyms_lookup_name_6_6_30.h  kernel_symbol_parser.cpp  kernel_symbol_parser.h  kernel_version_parser.cpp  symbol_analyze.cpp  symbol_analyze.h
testRoot/jni/: Android.mk  Build.bat  Clean.bat  kernel_root_kit.mk  testRoot.cpp  编译流程.txt
testRoot/jni/kernel_root_kit/: kernel_root_kit_command.h  kernel_root_kit_err_def.h  (+15 more)
(+927 files in other folders)
